# liferay-docs-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
distilled/cloud/: _index.md
distilled/development/: _index.md
distilled/search/: _index.md  developer-guide-search-queries-and-filters.md  installing-and-upgrading-a-search-engine-elasticsearch-upgrading-elasticsearch.md  installing-and-upgrading-a-search-engine-opensearch.md  search-administration-and-tuning-reindexing-modes.md
distilled/security/: _index.md
distilled/self-hosted/: _index.md
distilled/sites/: _index.md
docs/: distill_system_prompt.txt  index.html  release.md
docs/adr/: 0001-crawl4ai-based-corpus-pipeline.md  0002-drop-content-validation.md
docs/assets/: site.css
reports/: low_value_candidates.md
scripts/: build_nav_index.py  check_regressions.py  classify_pages.py  clean_boilerplate.py  crawl4ai_pipeline.py  extract_content.py  filter_urls.py  poc_crawl4ai.py  save_distilled.py
skills/liferay-expert/: SKILL.md
src/liferay_docs_scraper/: check_regressions.py  classify_pages.py  community.py  doctor.py  filter_urls.py  index.py  pipeline.py
tests/: test_classify_pages.py  test_community.py  test_doctor.py  test_filter_urls.py  test_index.py  test_pipeline.py
