[project]
name = "liferay-docs-scraper"
version = "0.1.1"
description = "Scrape learn.liferay.com/w/dxp into local Markdown docs (raw/{capability}/*.md) for the liferay-expert Claude Code skill."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crawl4ai>=0.9.0",
]

[project.scripts]
liferay-docs-scraper = "liferay_docs_scraper.pipeline:main"
check-regressions = "liferay_docs_scraper.check_regressions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liferay_docs_scraper"]
