[project]
name = "liferay-docs-scraper"
version = "0.5.0"
description = "Scrape learn.liferay.com/w/dxp into local Markdown docs (raw/{capability}/*.md) for the liferay-expert Claude Code skill."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crawl4ai>=0.9.0",
    "beautifulsoup4>=4.12",
]

[project.scripts]
liferay-docs-scraper = "liferay_docs_scraper.pipeline:main"
liferay-docs-scraper-community = "liferay_docs_scraper.community:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liferay_docs_scraper"]
