[project]
name = "liferay-docs-scraper"
version = "0.6.1"
description = "Scrape learn.liferay.com/w/dxp into local Markdown docs (raw/{capability}/*.md) for the liferay-expert Claude Code skill."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crawl4ai>=0.9.0,<1.0",
    "beautifulsoup4>=4.12,<5",
]

[project.scripts]
liferay-docs-scraper = "liferay_docs_scraper.pipeline:main"
liferay-docs-scraper-community = "liferay_docs_scraper.community:main"
liferay-docs-scraper-doctor = "liferay_docs_scraper.doctor:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liferay_docs_scraper"]

[dependency-groups]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
